--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.5",
-    "stream": "^0.0.2",
-    "webpack": "^4.47.0"
+    "stream": "^0.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
