--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@use-gesture/react": "^10.3.1",
     "aos": "^2.3.4",
     "assert": "^2.1.0",
     "axios": "^1.6.7",
@@ -34,6 +35,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.5",
+    "react-spring": "^9.7.3",
     "rewire": "^7.0.0",
     "sass": "^1.77.6",
     "stream": "^0.0.3",
