--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://nvadim11.github.io/Tiger/",
   "name": "tiger",
   "version": "0.1.0",
   "private": true,
@@ -22,6 +23,7 @@
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
+    "gh-pages": "^6.1.1",
     "https-browserify": "^1.0.0",
     "moment-timezone": "^0.5.45",
     "os-browserify": "^0.3.0",
@@ -47,6 +49,7 @@
     "web3": "^4.10.0"
   },
   "scripts": {
+    "deploy": "npm run build && gh-pages -d build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
