--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "framer-motion": "^11.2.10",
     "gh-pages": "^6.1.1",
     "https-browserify": "^1.0.0",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "moment-timezone": "^0.5.45",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
@@ -33,6 +36,7 @@
     "react": "^18.3.1",
     "react-code-input": "^3.10.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
     "react-redux": "^9.1.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.3",
