--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Tigran",
-    "url": "https://tg.temka.pro/",
-    "icon": "https://tg.temka.pro/logo192.png"
+    "url": "https://tg.tema.cash/",
+    "icon": "https://tg.tema.cash/logo192.png"
   }
   
