--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TigerTheCat",
-  "name": "Tiger The Cat",
+  "short_name": "Tigran",
+  "name": "Tigran",
   "icons": [
     {
       "src": "favicon.ico",
