--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Tigran",
-  "name": "Tigran",
+  "short_name": "Tiger",
+  "name": "Tiger",
   "icons": [
     {
       "src": "favicon.ico",
