--- a/public/tonconnect/tonconnect-manifest.json
+++ b/public/tonconnect/tonconnect-manifest.json
@@ -1,6 +1,6 @@
 {
     "url": "https://tg.tema.cash/",
-    "name": "Tigran",
+    "name": "Tiger",
     "icon": "https://tg.tema.cash/logo192.png"
   }
   
